# kineverse

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_pybullet.sh  package.xml  requirements.txt  setup.py
docs/: conf.py  index.rst
docs/api/: kineverse.gradients.rst  kineverse.model.rst  kineverse.motion.rst  kineverse.network.rst  kineverse.operations.rst  kineverse.rst  kineverse.visualization.rst  modules.rst
docs/getting_started/: math.rst  models.rst  operations.rst  welcome.rst
docs/images/: Kineverse_pkgs.xml
meshes/: suzanne.dae  suzanne.stl
meshes/microwave/: microwave.blend
msg/: Constraint.msg  Model.msg  ModelUpdate.msg  Operation.msg  OperationCall.msg  OperationsUpdate.msg  ValueMap.msg
resources/: urdf_template.jinja
scripts/: bpb_sandbox.py  contact_sandbox.py  debug_sandbox.py  debug_sandbox_pr2.py  kineverse_server.py  kitchen_bullet_world.py  kitchen_sandbox.py  llvm_speedtest.py  microwave_sandbox.py  model_tf_publisher.py  pybullet_old.py  ros_tools.py  sandbox.py  tricky_kinematics.py  upload_diff_drive_robot.py  upload_omnibase_robot.py  upload_roomba_robot.py  upload_urdf.py  visualize_axis_angle.py
src/kineverse/: __init__.py  bpb_wrapper.py  casadi_parser.py  json_serializable.py  json_wrapper.py  symengine_types.py  time_wrapper.py  type_sets.py  urdf_fix.py  utils.py  yaml_wrapper.py
src/kineverse/gradients/: __init__.py  common_math.py  diff_logic.py  gradient_container.py  gradient_math.py  gradient_matrix.py  (+1 more)
srv/: ApplyOperations.srv  DebugInfo.srv  GetConstraints.srv  GetHistory.srv  GetModel.srv  ListPaths.srv  LoadModel.srv  SaveModel.srv
test/: test_casadi_parser.py  test_events.py  test_frames.py  test_geometry_model.py  test_gradients.py  test_history.py  test_operations.py  test_qp_generation.py  test_server.py  test_tardis.py  test_tf_publisher.py  test_urdf.py  test_yaml.py
urdf/: microwave.urdf  testbot.urdf
(+45 files in other folders)
