<?xml version="1.0"?>
<package format="2">
  <name>kineverse</name>
  <version>0.0.0</version>
  <description>The kineverse package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="aroefer@uni-bremen.de">Adrian Röfer</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>kineverse_msgs</build_depend>
  <build_depend>python-numpy</build_depend>
  <build_depend>qpoases</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <!--build_depend>symengine</build_depend-->

  <!--build_export_depend>giskardpy</build_export_depend-->
  <build_export_depend>python-numpy</build_export_depend>
  <build_export_depend>qpoases</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <!--build_export_depend>symengine</build_export_depend-->

  <exec_depend>casadi-pip</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>kineverse_msgs</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>qpoases</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python-pandas</exec_depend>
  <exec_depend>python-sortedcontainers-pip</exec_depend>
  <exec_depend>python-tqdm</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <!--exec_depend>symengine</exec_depend-->
</package>
